# Carrot

./: .env.example  .gitignore  Makefile  README.md  client.py  main.py  message.py  pyproject.toml  runtime.py
.claude/: settings.json
.claude/skills/: spec.md
.claude/skills/spec/: SKILL.md
audit/: README.md  run_audit.py  scenarios.py
docs/: ToDo.md
evals/: README.md  run_evals.py  tasks.py
harness/: __init__.py  scripted_client.py
src/carrot/: __main__.py  checkpoint.py  client.py  context_governor.py  context_window.py  log.py  main.py  memory.py  message.py  permissions.py  prompts.py  runtime.py  sandbox.py  tui.py  workspace.py
src/carrot/tools/: __init__.py  bash_exec.py  edit_file.py  read_file.py  update_task_summary.py  write_episodic_note.py  write_file.py
tests/: test_audit_scenarios.py  test_checkpoint.py  test_context_governor.py  test_main_cli.py  test_memory.py  test_permissions.py  test_runtime_permissions.py  test_sandbox.py  test_tui.py
tools/: __init__.py  read_file.py
