[project]
name = "carrot"
version = "0.1.0"
description = "A coding agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.uv]
package = true
